--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "botkit": "0.5.4",
     "botkit-middleware-watson": "1.3.0",
     "dotenv": "2.0.0",
-    "express": "4.13.4"
+    "express": "4.13.4",
+    "ngrok": "^3.0.1"
   }
 }
